# rreng

./: Cargo.toml  README.md
.github/workflows/: web-gui.yml
assets/: index.html
assets/data/: jvl.json  jvl.toml  tiles.toml
assets/data/nztm_lidar/: DEM_BQ31_2019_1000_1637.tif  DEM_BQ31_2019_1000_1638.tif  DEM_BQ31_2019_1000_1639.tif  DEM_BQ31_2019_1000_1734.tif  DEM_BQ31_2019_1000_1737.tif  DEM_BQ31_2020_1000_1432.tif  DEM_BQ31_2020_1000_1433.tif  DEM_BQ31_2020_1000_1434.tif  DEM_BQ31_2020_1000_1435.tif  DEM_BQ31_2020_1000_1436.tif  DEM_BQ31_2020_1000_1437.tif  DEM_BQ31_2020_1000_1438.tif  DEM_BQ31_2020_1000_1532.tif  DEM_BQ31_2020_1000_1534.tif  DEM_BQ31_2020_1000_1535.tif  DEM_BQ31_2020_1000_1536.tif  DEM_BQ31_2020_1000_1537.tif  DEM_BQ31_2020_1000_1538.tif  DEM_BQ31_2020_1000_1539.tif  DEM_BQ31_2020_1000_1632.tif  DEM_BQ31_2020_1000_1634.tif  DEM_BQ31_2020_1000_1635.tif  DEM_BQ31_2020_1000_1636.tif  DEM_BQ31_2020_1000_1732.tif  DSM_BQ31_2019_1000_1637.tif  DSM_BQ31_2019_1000_1639.tif  DSM_BQ31_2019_1000_1733.tif  DSM_BQ31_2019_1000_1734.tif  DSM_BQ31_2019_1000_1736.tif  DSM_BQ31_2019_1000_1737.tif  DSM_BQ31_2019_1000_1738.tif  DSM_BQ31_2019_1000_1739.tif  DSM_BQ31_2020_1000_1432.tif  DSM_BQ31_2020_1000_1433.tif  DSM_BQ31_2020_1000_1434.tif  DSM_BQ31_2020_1000_1435.tif  DSM_BQ31_2020_1000_1436.tif  DSM_BQ31_2020_1000_1438.tif  DSM_BQ31_2020_1000_1534.tif  DSM_BQ31_2020_1000_1535.tif  (+6 more)
assets/models/: README.md
examples/: train.rs
gui/: rreng.d.ts  rreng.js  rreng_bg.wasm.d.ts
gui/assets/data/: jvl.json  jvl.ron  jvl.toml  tiles.ron  tiles.toml
gui/assets/data/nztm_lidar/: DEM_BQ31_2019_1000_1733.tif  DEM_BQ31_2019_1000_1735.tif  DEM_BQ31_2019_1000_1736.tif  DEM_BQ31_2019_1000_1738.tif  DEM_BQ31_2019_1000_1739.tif  DEM_BQ31_2020_1000_1439.tif  DEM_BQ31_2020_1000_1533.tif  DEM_BQ31_2020_1000_1633.tif  DSM_BQ31_2019_1000_1638.tif  DSM_BQ31_2019_1000_1735.tif  DSM_BQ31_2020_1000_1437.tif  DSM_BQ31_2020_1000_1439.tif  DSM_BQ31_2020_1000_1532.tif  DSM_BQ31_2020_1000_1533.tif  DSM_BQ31_2020_1000_1536.tif  DSM_BQ31_2020_1000_1539.tif  DSM_BQ31_2020_1000_1633.tif  DSM_BQ31_2020_1000_1634.tif  DSM_BQ31_2020_1000_1732.tif  README.md
gui/assets/fonts/: README.md
gui/assets/models/: lowpoly_train.glb
src/: camera.rs  datafile.rs  debug.rs  events.rs  heightmap.rs  lib.rs  main.rs  screens.rs  sky.rs  speed.rs  terrain.rs  theme.rs  toolbar.rs  tools.rs  utils.rs
src/level/: datafile.rs  loading.rs  mod.rs  selection.rs
src/terrain/: creation.rs  datafile.rs  edit.rs  heightmap.rs  loading.rs  mod.rs  rendering.rs  rtin.rs  selection.rs  terrain.rs  tiles.rs  utils.rs
src/terrain/rendering/: mesh_tree.rs  mod.rs  water.rs
src/track/: bridge.rs  mod.rs  point.rs  rendering.rs  segment.rs
src/train/: mod.rs  movement.rs  rendering.rs
src/ui/: toolbar.rs
src/worker/: behaviour.rs  debug.rs  mod.rs  movement.rs  rendering.rs
