[package]
name = "rreng"
version = "0.7.0"
edition = "2021"
rust-version = "1.85.0"
default-run = "rreng"

[features]
trace_tracy = ["bevy/trace_tracy"]

[dependencies]
bevy_egui = { version = "0.34", default-features = false }
earcutr = "0.4"
egui = "0.31"
geotiff = { git = "https://github.com/georust/geotiff", rev = "9ccfe90" }
glob = "0.3"
noise = "0.9"
ndarray = "0.16"
rand = "0.8"
ron = "0.10"
serde = "1.0"
thiserror = "2.0"
tiff = "0.9"
tracing-subscriber = "0.3"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_gltf",
    "bevy_state",
    "bevy_render",
    "bevy_mesh_picking_backend",
    "bevy_ui_picking_backend",
    "bevy_picking",
    "bevy_pbr",
    "bevy_gizmos",
    "bevy_ui",
    "bevy_window",
    "animation",
    "multi_threaded",
    "png",
    "trace",
    "webgl2",
]

[dependencies.bevy-inspector-egui]
version = "0.31"
default-features = false
features = [
    "bevy_render"
]

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
strip = true

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
